# sentinel

./: .gitignore  Cargo.toml  README.md  pyproject.toml  sentinel.yaml.example
pi-extension/: index.ts
sentinel/: cli.py  config.py  crypto.py  fsm.py  mcp_server.py  receipt.py  server.py  uuid7.py
src/: cli.rs  config.rs  crypto.rs  fsm.rs  lib.rs  main.rs  receipt.rs  server.rs  uuid7.rs
tests/: cli.rs  config.rs  conftest.py  crypto.rs  fsm.rs  receipt.rs  server.rs  test_config.py  test_crypto.py  test_fsm.py  test_receipt.py  test_server.py  test_uuid7.py  uuid7.rs
