[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["rand_core", "pkcs8", "pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
pkcs8 = { version = "0.10", features = ["pem"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23", features = ["v7"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
