[project]
name = "sentinel"
version = "0.1.0"
description = "State-based tool gating and cryptographic receipt system for pi"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
sentinel = "sentinel.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
